Added connection by gRPC with AI detection service
